Add user types and various fixes
