# docs/swagger.json
@@ -2728,6 +2728,58 @@
                 }
             }
         },
+        "/user/{name}/typeId": {
+            "patch": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Set a user's type Id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Set a user's type Id",
+                "parameters": [
+                    {
+                        "description": "User Type Id",
+                        "name": "typeId",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UserType"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "User name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.UserType"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.FailureMsg"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "security": [
@@ -2759,7 +2811,7 @@
                 }
             }
         },
-        "/users/byOuId/{ouId}": {
+        "/users/ouid/{ouId}": {
             "get": {
                 "security": [
                     {
@@ -2799,7 +2851,7 @@
                 }
             }
         },
-        "/users/byRoleId/{roleId}": {
+        "/users/roleid/{roleId}": {
             "get": {
                 "security": [
                     {
@@ -2819,6 +2871,46 @@
                         "type": "integer",
                         "description": "Role Id",
                         "name": "roleId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.UsersList"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.FailureMsg"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/typeid/{typeId}": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Retrieve list of users by type Id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Retrieve list of users by type Id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Type Id",
+                        "name": "typeId",
                         "in": "path",
                         "required": true
                     }
@@ -3340,6 +3432,9 @@
                 },
                 "userName": {
                     "type": "string"
+                },
+                "userTypeId": {
+                    "type": "integer"
                 }
             }
         },
@@ -3460,6 +3555,9 @@
                 },
                 "userName": {
                     "type": "string"
+                },
+                "userTypeId": {
+                    "type": "integer"
                 }
             }
         },
@@ -3516,6 +3614,29 @@
                     "type": "string"
                 },
                 "userStatus": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.UserType": {
+            "type": "object",
+            "properties": {
+                "Id": {
+                    "type": "integer"
+                },
+                "allowDeletion": {
+                    "type": "boolean"
+                },
+                "allowDisable": {
+                    "type": "boolean"
+                },
+                "allowRoleChange": {
+                    "type": "boolean"
+                },
+                "typeDescription": {
+                    "type": "string"
+                },
+                "typeName": {
                     "type": "string"
                 }
             }
